# gardenia

./: .clangd  .gitignore  CMakeLists.txt  main.cc  scheduler.proto  task.proto
include/: common.h  operations.cuh  scheduler.h  set_difference.cuh  set_intersect.cuh  sim.h  task.h  worklistc.h
src/: common.mk
src/bfs/: bfs_side_task.cu  hybrid_vector.cu  linear_base.cu  linear_vector.cu  topo_vector.cu
src/pr/: pr_side_task.cu
src/sgd/: sgd_side_task.cu
